Fix for codacy static code analysis warnings